// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/ErrorBoundary Broken Fallback 1`] = `
<div
  id="root"
>
  <p>
    A simple element
  </p>
</div>
`;

exports[`Storyshots common/ErrorBoundary Broken Fallback Element 1`] = `
<div
  id="root"
/>
`;

exports[`Storyshots common/ErrorBoundary Broken No Fallback 1`] = `
<div
  id="root"
/>
`;

exports[`Storyshots common/ErrorBoundary No Problem 1`] = `
<div
  id="root"
>
  <i>
    This is not failing.
  </i>
</div>
`;
